src/main/java/io/bitsquare/gui/bitsquare.css
#splash {
    -fx-background-color: #ffffff;
}

#logo-sub-title-label{
   -fx-font-weight: bold;
    -fx-font-size: 24;
}

#main-view {
    -fx-background-color: #dddddd;
}

#content-pane {
    -fx-background-color: #f4f4f4;
}

#headline-label {
    -fx-font-weight: bold;
    -fx-font-size: 18;
}

#info-label {
    -fx-font-size: 14;
}

#online-label {
    -fx-fill: green;
}

#offline-label {
    -fx-fill: red;
}

/* main nav */
#nav-button {
    -fx-cursor: hand;
    -fx-background-color: transparent;
    -fx-alignment: center;
}

#nav-alert-button {
    -fx-background-color: transparent;
    -fx-cursor: hand;
    -fx-border-style: none;
}

#nav-button-label {
    -fx-font-size: 10;
    -fx-text-alignment: center;
    -fx-alignment: center;
}

#nav-balance-label {
    -fx-font-weight: bold;
    -fx-text-alignment: right;
}

#nav-balance-currency-label {
    -fx-text-alignment: left;
}

.text-field:readonly {
    -fx-text-fill: #000000;
    -fx-background-color: #FBFBFB;
}

#feedback-text {
    -fx-font-size: 10;
}

#label-url {
    -fx-cursor: hand;
    -fx-text-fill: blue;
    -fx-underline: true;
}

#icon-button {
    -fx-cursor: hand;
    -fx-background-color: transparent;
}

#copy-icon {
     -fx-fill: black;
     -fx-cursor: hand;
}

#copy-icon .hover{
      -fx-fill: #0096c9;
      -fx-cursor: hand;
}

.copy-icon {
    -fx-fill: #0096c9;
    -fx-cursor: hand;
}

.copy-icon:hover {
    -fx-fill: black;
}

#funds-confidence {
    -fx-progress-color: dimgrey;
}

/* .table-view */
.table-view .table-cell {
    -fx-alignment: center;
}

.table-view .column-header .label {
    -fx-alignment-alignment: center;
}

.table-view .focus {
    -fx-alignment: center;
}

.table-view .text {
    -fx-fill: black;
}

.table-view .table-row-cell:selected .table-row-cell:row-selection .table-row-cell:cell-selection .text {
    -fx-fill: white;
}

.table-view .table-row-cell:selected .button .text {
    -fx-fill: black;
}

.table-view .table-row-cell .copy-icon .text {
    -fx-fill: #0096c9;
}

.table-view .table-row-cell .copy-icon .text:hover {
    -fx-fill: black;
}

.table-view .table-row-cell:selected .copy-icon .text {
    -fx-fill: white;
}

.table-view .table-row-cell:selected .copy-icon .text:hover {
    -fx-fill: black;
}

.table-view .table-row-cell .hyperlink .text {
    -fx-fill: #0096c9;
}

.table-view .table-row-cell .hyperlink .text:hover {
    -fx-fill: black;
}

.table-view .table-row-cell:selected .hyperlink .text {
    -fx-fill: white;
}

.table-view .table-row-cell:selected .hyperlink .text:hover {
    -fx-fill: black;
}

/* forms */
#form-header-text {
    -fx-font-weight: bold;
    -fx-font-size: 14;
}

#form-group-label {
    -fx-font-weight: bold;
    -fx-font-size: 14;
    -fx-text-fill:#0096c9;
    -fx-background-color:#f4f4f4;
}

#form-group-border {
    -fx-border-color: #96D3E9;
    -fx-border-radius: 4;
}

#form-title {
    -fx-font-weight: bold;
}


/* tab pane */
.tab-pane .tab-label {
    -fx-font-size: 15;
}

.tab-pane:focused {
    -fx-background-color: transparent;
}

.tab-header-area:focused {
    -fx-background-color: transparent;
}

.tab:focused {
    -fx-background-color: transparent;
}

/* table-view */
.table-view:focused {
    -fx-background-color: transparent;
}

/* scroll-pane */

.scroll-pane {
    -fx-background-insets: 0;
    -fx-padding: 0;
}

.scroll-pane:focused {
    -fx-background-insets: 0;
}

.scroll-pane .corner {
    -fx-background-insets: 0;
}


/* validation */
#validation-error {
   -fx-text-fill: red;
}

